<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Z6_FSM" Id="{d93bc223-e386-0ccc-0756-92d817d9bf1d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Z6_FSM
VAR_INPUT
	bEnable		:	BOOL;
	bAck		:	BOOL;
	bStop		:	BOOL;
	bI9			:	BOOL;
	stParams	:	ST_Z6_Params;	
END_VAR
VAR_IN_OUT
	stStatus	:	ST_FSM_Status;	
END_VAR
VAR_OUTPUT
	// Digital Outputs
	bQ10		:	BOOL;
	bErr		:	BOOL;
END_VAR
VAR
	// FSM internal variables
	bInitialized	:	BOOL;
	eNewstep		:	E_Z6_Step;
	bEntryact		:	BOOL;
	fbTonStep		:	TON;
	
	fbRtStop		:	R_TRIG;
	fbRtI9			:	R_TRIG;
	bStopRequest	:	BOOL;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT bInitialized THEN
	eNewstep :=  E_Z6_Step.NoStep;
	stStatus.stZ1.eStep :=  E_Z1_Step.Stop;
	bEntryact := FALSE;
	bInitialized := TRUE;	
	bErr := FALSE;
	stStatus.stZ1.eErrorStep :=  E_Z1_Step.NoStep;	
	stStatus.stZ1.nErrorId := 0;	
ELSE
	(* fronti *)
	fbRtStop(CLK:= bStop);	
	fbRtI9(CLK := bI9);
	
	(* richieste *)
	IF fbRtStop.Q THEN
		bStopRequest := TRUE;
	END_IF; 

	(* disabilitata o avaria *)
	IF NOT bEnable THEN
		eNewstep := E_Z6_Step.NeOrError;
	END_IF;
	
	(* aggiornamento dello stato *)
	IF eNewstep <>  E_Z6_Step.NoStep THEN
		stStatus.stZ6.eStep := eNewstep;
		eNewstep :=  E_Z6_Step.NoStep;
		bEntryact := FALSE;
	END_IF;	
	
	(* switch - case della MSF *)
	CASE stStatus.stZ6.eStep OF
	// To be done...
	
	
	ELSE
			eNewstep :=  E_Z6_Step.NeOrError;
			stStatus.stZ6.eErrorStep :=  E_Z6_Step.Unknown;			
			stStatus.stZ6.nErrorId := 16#0006_9999;	
	END_CASE
	
	(* call FBs *)
	
	(* tempo di permanenza nello step *)
	fbTonStep(IN := (eNewstep =  E_Z6_Step.NoStep), PT := T#500H);
	stStatus.stZ6.tStepTime := fbTonStep.ET;	
	
END_IF	]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>